--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "byline": "^5.0.0",
     "chalk": "^1.1.3",
     "co": "^4.6.0",
+    "five-bells-shared": "^19.0.0",
+    "sqlite": "^2.2.0",
     "superagent": "^2.3.0",
     "supports-color": "^3.1.2",
     "through2": "^2.0.1"
