--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "interledger"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/interledgerjs/five-bells-service-manager/issues"
   },
