--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/interledgerjs/five-bells-service-manager#readme",
   "dependencies": {
+    "bignumber.js": "^4.0.0",
     "byline": "^5.0.0",
     "chalk": "^1.1.3",
     "co": "^4.6.0",
