--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chalk": "^1.1.3",
     "co": "^4.6.0",
     "five-bells-shared": "^21.0.1",
-    "sqlite": "^2.2.0",
+    "pg-promise": "^5.6.4",
     "superagent": "^3.1.0",
     "supports-color": "^3.1.2",
     "through2": "^2.0.1"
