--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,13 @@ test:
   override:
     # Run lint
     - npm run lint
+    # Run integration tests (try this at home: https://github.com/interledgerjs/five-bells-integration-test/#installation)
+    - ./node_modules/.bin/integration-loader && ./node_modules/.bin/integration setup
+    - ln -s `pwd` node_modules/five-bells-service-manager
+    - ./node_modules/.bin/integration test index
+    - ./node_modules/.bin/integration test advanced
+    - ./node_modules/.bin/integration test connector_first
+    - ./node_modules/.bin/integration test ilp-kit
     # Run tests with coverage
     #- npm test --coverage -- -R spec-xunit-file
     # Extract test artifacts
