--- a/package.json
+++ b/package.json
@@ -24,20 +24,18 @@
     "bignumber.js": "^4.0.0",
     "byline": "^5.0.0",
     "chalk": "^1.1.3",
-    "co": "^4.6.0",
     "five-bells-shared": "^25.0.0",
     "pg-promise": "^5.6.4",
-    "rimraf": "^2.6.1",
-    "superagent": "^3.1.0",
     "supports-color": "^3.1.2",
-    "through2": "^2.0.1",
-    "uuid": "^3.0.1"
+    "through2": "^2.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.5.0",
-    "eslint-config-standard": "^6.0.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.0",
+    "eslint": "^4.14.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "five-bells-integration-test-loader": "^1.3.0"
   },
   "config": {
