--- a/package.json
+++ b/package.json
@@ -21,21 +21,20 @@
   },
   "homepage": "https://github.com/interledgerjs/five-bells-service-manager#readme",
   "dependencies": {
-    "bignumber.js": "^4.0.0",
     "byline": "^5.0.0",
-    "chalk": "^1.1.3",
-    "pg-promise": "^5.6.4",
-    "supports-color": "^3.1.2",
-    "through2": "^2.0.1"
+    "chalk": "^2.4.1",
+    "pg-promise": "^8.5.0",
+    "supports-color": "^5.5.0",
+    "through2": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^4.14.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "five-bells-integration-test-loader": "^1.5.0"
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "five-bells-integration-test-loader": "^1.5.3"
   },
   "config": {
     "five-bells-integration-test-loader": {
